# khoj

./: README.md
DjangoPractice/practice/practice/: views.py
Practice/: testing.txt
Practice-Maisha/SPIDER/: index.html  inner-page.html
Practice-Maisha/Test/Test/: Views.py  settings.py  (+1 more)
Practice-Maisha/poetry-test/: db.sqlite3  pyproject.toml
SRS/: SRS.html
SRS/src/: print.css
Sarwar practice/scrapypractice/: pyproject.toml  scrapped.json
Sarwar practice/scrapypractice/scrapypractice/scrapypractice/: items.py  middlewares.py  pipelines.py  scrapped.json  settings.py
Sarwar practice/scrapypractice/scrapypractice/scrapypractice/spiders/: crawlspider.py  pdfspider.py  posts_spider.py  spidertest.py
Sarwar practice/scrapypractice/tests/: test_scrapypractice.py
Test/Test/: settings.py  urls.py
Test/shop/: views.py
android/: local.properties
android_app/app/: build.gradle
backend/: pyproject.toml
backend/mysite/: settings.py
demo_srs/: SRS_sample.html
demo_srs/src/: index.css
djangopractice/blogs/: db.sqlite3
practice-bashem/backend/: db.sqlite3  pyproject.toml
practice-bashem/backend/mysite/: settings.py  urls.py
practice-bashem/backend/polls/migrations/: 0001_initial.py
practice-omi/Crawl_check/: p1.html  p10.html  p11.html  p12.html  p13.html  p14.html  p15.html  p16.html  p17.html  p18.html  p19.html  p2.html  p20.html  p3.html  p4.html  p5.html  p6.html  p7.html  p8.html  p9.html
practice-omi/api_practice/: db.sqlite3  myapp.py  pyproject.toml
practice-omi/api_practice/project/: settings.py  urls.py
practice-omi/api_practice/snippets/: models.py  serializers.py  views.py
practice-omi/api_practice/snippets/migrations/: 0001_initial.py
practice-omi/blogs/: db.sqlite3  pyproject.toml
practice-omi/django_poetry_example/: db.sqlite3  pyproject.toml
practice-omi/mysite/: db.sqlite3
practice/backend/: db.sqlite3
website/: .gitignore  api_check.py  api_documentation.txt  db.sqlite3  models.py  pyproject.toml  readme.md  scrapped.json
website/API/: serializer.py  urls.py  views.py
website/CreateClusters/: admin.py  apps.py  models.py  spiders.py  tests.py  urls.py  views.py
website/CreateClusters/migrations/: 0001_initial.py  0002_auto_20211124_1927.py  0002_auto_20211206_1707.py  0002_clusters_isscrapedcluster.py  0003_auto_20211130_1135.py
website/CreateClusters/templates/CreateClusters/: Clusterindex.html
website/auth_app/: admin.py  models.py  views.py
website/auth_app/migrations/: 0001_initial.py
website/indexer/: IndexResult.py  docker-compose.yml  insert.py  query.py
website/project_root/: settings.py  tests.py  urls.py  views.py
website/templates/: ClusterIndex.html  base.html  index.html  search.html
website/templates/assets/css/: style.css  style02.css
website/templates/assets/js/: main.js
website/website/: scripts.py
(+130 files in other folders)
