[tool.poetry]
name = "scrapypractice"
version = "0.1.0"
description = ""
authors = ["Sarwar Khalid <56037779+Nekrodeath@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
