[tool.poetry]
name = "scrapypractice"
version = "0.1.0"
description = ""
authors = ["Sarwar Khalid <56037779+Nekrodeath@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
crochet = "^2.0.0"
PyMuPDF = "^1.19.2"
requests = "^2.26.0"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
