[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bashem"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.8"
pysolr = "^3.9.0"
django-allauth = "^0.45.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
server = "backend.scripts:django_run_server"
django = "backend.scripts:django_run_manage"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
